minor changes for updates

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<li><a href="https://www.taltallc.com/" class="icon solid fa-cubes"><span class="label">TALTA LLC</span></a></li>
 						<!--<li><a href="#" class="fas fa-mountain"><span class="label">Digital Edge Advisors</span></a></li>-->
 						<li><a href="https://github.com/talta" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:theresa.augustin.pmp@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:agileprograms@proton.me" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -54,12 +54,12 @@
 								<div class="container">
 									<header class="major">
 										<h2>Agile Programs</h2>
-										<p>Agile Principles Applied to Digital Strategy.</p>
+										<p>Agile Principles Applied to Digital Strategy</p>
 									</header>
 									<p>
-									| Seamless execution of complex initiatives, fostering collaboration and stakeholder engagement. |<br>
-									| Commitment to continuous improvement and responsiveness to change. | <br> 
-									| Empowering organizations to achieve their business objectives in dynamic environments.|
+									| Seamless execution of complex initiatives, fostering collaboration and stakeholder engagement |<br>
+									| Commitment to continuous improvement and responsiveness to change | <br> 
+									| Empowering organizations to achieve their business objectives in dynamic environments |
 									</p>
 								</div>
 							</section>
@@ -68,13 +68,13 @@
 							<section id="two">
 								<div class="container">
 									<h3>Toolbox</h3>
-									<p>An Agile Program toolbox includes offerings that bolster your business value.  </p>
+									<p>An Agile Program toolbox includes offerings that bolster your business value  </p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Technical Business Analysis</li>
 										<li class="icon solid fa-cubes">Roadmap Planning</li>
 										<li class="icon solid fa-paper-plane">Digital Transformation</li>
 										<li class="icon solid fa-solid fa-sitemap">Visual System Diagramming</li>
-										<li class="icon solid fa-unlock">Value Justification</li>
+										<li class="icon solid fa-unlock">Business Value Justification</li>
 										<li class="icon solid fa-solid fa-paperclip">Data Privacy and Cybersecurity Compliance</li>
 									</ul>
 								</div>
@@ -84,7 +84,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Engagements</h3>
-									<p>Agile Program engagements can deliver incrementally to realize business value quickly, all with a humanistic lens.  </p>
+									<p>Agile Program engagements deliver incrementally to realize business value quickly, all with a humanistic lens.  </p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/RiverRail.jpg" alt="" /></a>
