--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/sunset.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/agile_programs_logo.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Agile Programs</a></h1>
 					<p>Agile Program Management Services</p>
 				</header>
